@@ -1,12 +1,3 @@
-# -*- coding:utf-8 -*-
-'''
-# =========================
-# YouCompeleteMe 配置文件
-# 位置: ~/.ycm_extra_conf.py
-# 备注: 由newycm_extra_conf.py 生成
-#       https://github.com/robturtle/newycm_extra_conf.py
-'''
-
 # This file is NOT licensed under the GPLv3, which is the license for the rest
 # of YouCompleteMe.
 #
@@ -18,7 +9,6 @@
 # distribute this software, either in source code form or as a compiled
 # binary, for any purpose, commercial or non-commercial, and by any
 # means.
-
 #
 # In jurisdictions that recognize copyright laws, the author or authors
 # of this software dedicate any and all copyright interest in the
@@ -45,14 +35,11 @@ import ycm_core
 # compilation database set (by default, one is not set).
 # CHANGE THIS LIST OF FLAGS. YES, THIS IS THE DROID YOU HAVE BEEN LOOKING FOR.
 flags = [
-'-Wall',            # The Wmissing-braces is useless in c++11
-'-Wextra',
-#'-Werror',          # Fucking unused parameter argc!!!
-#'-Wc++98-compat',   # Well i love c++11!!!
-'-Wno-long-long',
-'-Wno-variadic-macros',
+'-Wall',
 '-fexceptions',
 '-DNDEBUG',
+# You 100% do NOT need -DUSE_CLANG_COMPLETER in your flags; only the YCM
+# source code needs it.
 '-DUSE_CLANG_COMPLETER',
 # THIS IS IMPORTANT! Without a "-std=<something>" flag, clang won't know which
 # language to use when compiling headers. So it will guess. Badly. So C++
@@ -60,7 +47,7 @@ flags = [
 # a "-std=<something>".
 # For a C project, you would set this to something like 'c99' instead of
 # 'c++11'.
-'-std=c++11',
+'-std=gnu++14',
 # ...and the same thing goes for the magic -x option which specifies the
 # language that the files to be compiled are written in. This is mostly
 # relevant for c++ headers.
@@ -70,6 +57,8 @@ flags = [
 '-isystem',
 '../BoostParts',
 '-isystem',
+'-I'
+'/usr/local/include',
 # This path will only work on OS X, but extra paths that don't exist are not
 # harmful
 '/System/Library/Frameworks/Python.framework/Headers',
@@ -88,26 +77,26 @@ flags = [
 '-isystem',
 './tests/gmock',
 '-isystem',
-'./tests/gmock/include'
-'-I',
-'/usr/include',
-'-I'
-'/usr/local/include',
 ]
 
 # Set this to the absolute path to the folder (NOT the file!) containing the
 # compile_commands.json file to use that instead of 'flags'. See here for
 # more details: http://clang.llvm.org/docs/JSONCompilationDatabase.html
 #
+# You can get CMake to generate this file for you by adding:
+#   set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )
+# to your CMakeLists.txt file.
+#
 # Most projects will NOT need to set this to anything; you can just change the
 # 'flags' list of compilation flags. Notice that YCM itself uses that approach.
 compilation_database_folder = ''
 
-if compilation_database_folder:
+if os.path.exists( compilation_database_folder ):
   database = ycm_core.CompilationDatabase( compilation_database_folder )
 else:
   database = None
 
+SOURCE_EXTENSIONS = [ '.cpp', '.cxx', '.cc', '.c', '.m', '.mm' ]
 
 def DirectoryOfThisScript():
   return os.path.dirname( os.path.abspath( __file__ ) )
@@ -142,14 +131,47 @@ def MakeRelativePathsInFlagsAbsolute( flags, working_directory ):
   return new_flags
 
 
-def FlagsForFile( filename ):
+def IsHeaderFile( filename ):
+  extension = os.path.splitext( filename )[ 1 ]
+  return extension in [ '.h', '.hxx', '.hpp', '.hh' ]
+
+
+def GetCompilationInfoForFile( filename ):
+  # The compilation_commands.json file generated by CMake does not have entries
+  # for header files. So we do our best by asking the db for flags for a
+  # corresponding source file, if any. If one exists, the flags for that file
+  # should be good enough.
+  if IsHeaderFile( filename ):
+    basename = os.path.splitext( filename )[ 0 ]
+    for extension in SOURCE_EXTENSIONS:
+      replacement_file = basename + extension
+      if os.path.exists( replacement_file ):
+        compilation_info = database.GetCompilationInfoForFile(
+          replacement_file )
+        if compilation_info.compiler_flags_:
+          return compilation_info
+    return None
+  return database.GetCompilationInfoForFile( filename )
+
+def FlagsForFile( filename, **kwargs ):
   if database:
     # Bear in mind that compilation_info.compiler_flags_ does NOT return a
     # python list, but a "list-like" StringVec object
-    compilation_info = database.GetCompilationInfoForFile( filename )
+    compilation_info = GetCompilationInfoForFile( filename )
+    if not compilation_info:
+      return None
+
     final_flags = MakeRelativePathsInFlagsAbsolute(
       compilation_info.compiler_flags_,
       compilation_info.compiler_working_dir_ )
+
+    # NOTE: This is just for YouCompleteMe; it's highly likely that your project
+    # does NOT need to remove the stdlib flag. DO NOT USE THIS IN YOUR
+    # ycm_extra_conf IF YOU'RE NOT 100% SURE YOU NEED IT.
+    try:
+      final_flags.remove( '-stdlib=libc++' )
+    except ValueError:
+      pass
   else:
     relative_to = DirectoryOfThisScript()
     final_flags = MakeRelativePathsInFlagsAbsolute( flags, relative_to )
@@ -158,25 +180,60 @@ def FlagsForFile( filename ):
     'flags': final_flags,
     'do_cache': True
   }
-# NOTE Things I marked as TODO is not nessessary means I
-#      will do it myself someday. It could be a suggestion
-#      for anyone interested in it.
 
-# NOTE for Linux user
-# Qt common flags
-# The Qt pkg-config module in Gentoo is Qt4/Qt5, But in OS X it's splited into many sub-modules.
-# Do the compatible work yourself if needed
-QtModules = ["QtCLucene", "QtDeclarative", "QtDesignerComponents", "QtHelp", "QtNetwork", "QtScript", "QtSql", "QtTest", "QtUiTools_debug", "QtXml",
-             "QtCore", "QtDesigner", "QtGui", "QtMultimedia", "QtOpenGL", "QtScriptTools", "QtSvg", "QtUiTools", "QtWebKit", "QtXmlPatterns"]
+# ==============================================================================
+# My Custom Configuration
+# ==============================================================================
 
-from subprocess import Popen
-from subprocess import PIPE
-qtflags = []
-# TODO just inject the flags I used but not all of them
-for module in QtModules:
-    qtflags += Popen(['pkg-config', '--cflags'] + QtModules, stdout=PIPE).communicate()[0].split()
+# Add kernel api support
+# Add by Arondight <shell_way@foxmail.com>
+# See #18 for more info
+# {
+def FlagsForKernel ():
+  global flags
+  kernelflags = []
+  krelease = os.popen ("uname -r").readlines ()[0].strip ("\n")
+  kbuilddir = os.path.join ('/', 'usr', 'lib', 'modules', krelease, 'build')
+  kconfigh = os.path.join (kbuilddir, 'include', 'linux', 'kconfig.h')
+  kheaddirs = [
+    os.path.join (kbuilddir, 'include'),
+    os.path.join (kbuilddir, 'arch', 'x86', 'include')
+  ]
 
-flags += qtflags
-# NOTE since the opencv2 library will be installed in the standard include path (e.g. /usr/include)
-#      So there is no need to inject external flags here
+  for kheaddir in kheaddirs:
+    kernelflags += [ '-I', kheaddir ]
+  kernelflags += [ '-include', kconfigh ]
+
+  flags += kernelflags
+
+  return None
+# }
+
+# Add Qt support
+# Add by Arondight <shell_way@foxmail.com>
+# {
+def FlagsForQt ():
+  global flags
+  qtflags = []
+  qmodules = [
+    "QtCLucene", "QtDeclarative", "QtDesignerComponents", "QtHelp", "QtNetwork",
+    "QtScript", "QtSql", "QtTest", "QtUiTools_debug", "QtXml", "QtCore",
+    "QtDesigner", "QtGui", "QtMultimedia", "QtOpenGL", "QtScriptTools",
+    "QtSvg", "QtUiTools", "QtWebKit", "QtXmlPatterns"
+  ]
+
+  from subprocess import Popen
+  from subprocess import PIPE
+
+  for module in qmodules:
+    qtflags += Popen ([ 'pkg-config', '--cflags' ]
+                        + qmodules, stdout=PIPE).communicate ()[0].split ()
+
+  flags += qtflags
+
+  return None
+# }
+
+FlagsForKernel ()
+FlagsForQt ()
 
